auth fix
